# E_Business

./: .env.example  .gitignore  .mcp.json  .railwayignore  AGENTS.md  Agent-Implementation-plan.md  Agent-native.md  Agent-plan copy.md  Agent-plan2.md  App.tsx  CHROME-DEVTOOLS-E2E-TEST-REPORT.md  E2E-TEST-REPORT.md  README.md  agent_design_structure.md  deploy_railway_quick.sh  deploy_to_railway.sh  diff.txt  docker-compose.prod.yml  docker-compose.yml  findings.md  implementation.md  index.html  install_plugin.bat  metadata.json  nowplan.md  package-lock.json  package.json  progress.md  railway.toml  render.yaml  repro_log.txt  repro_log_auth.txt  repro_log_auth_utf8.txt  repro_log_final.txt  repro_log_final_utf8.txt  repro_log_full_flow.txt  repro_log_full_flow_utf8.txt  repro_log_utf8.txt  reproduce_issue.cjs  scheule.md  (+7 more)
backend/: .env.example  Dockerfile  Makefile  README.md  RUN_TESTS.md  alembic.ini  check_test.py  debug_log.txt  debug_output.txt  debug_output_result.txt  debug_paths.py  debug_settings.py  debug_workflow.py  load_out.txt  mcp_test_result.txt  pyproject.test.toml  pyproject.toml  pytest_final.txt  pytest_output.txt  pytest_output2.txt  pytest_regression.txt  pytest_result.txt  reproduce_issue.py  requirements.txt  restart_clean.sh  run_tests.py  setup_langsmith.py  stream_debug.txt  stream_test_output.txt  test_agent_result.txt  test_api_key_runtime.py  test_cors_output.txt  test_deepseek_connection.py  test_deepseek_direct.py  test_deepseek_manual.py  test_generator_init.py  test_langsmith_setup.py  test_llm_generation.py  test_llm_simple.py  (+14 more)
(+253 files in other folders)
